--- a/nineth/package.json
+++ b/nineth/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "mongoose": "^6.1.2",
         "pg": "^8.7.1",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.12.0-beta.3"
