added http-method-enum, @hapi/hapi and status-code-enum dependencies.

--- a/nineth/package.json
+++ b/nineth/package.json
@@ -2,19 +2,22 @@
     "name": "nineth",
     "version": "1.0.0",
     "description": "",
-    "main": "./src/strategy.js",
+    "main": "src/api.js",
     "scripts": {
-        "dev": "node .",
+        "start": "node .",
         "test": "mocha ./src/tests/*.test.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@hapi/hapi": "^20.2.1",
+        "http-method-enum": "^1.0.0",
         "mongoose": "^6.1.2",
         "pg": "^8.7.1",
         "pg-hstore": "^2.3.4",
-        "sequelize": "^6.12.0-beta.3"
+        "sequelize": "^6.12.0-beta.3",
+        "status-code-enum": "^1.0.0"
     },
     "devDependencies": {
         "mocha": "^9.1.3"
