--- a/nineth/package.json
+++ b/nineth/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@hapi/hapi": "^20.2.1",
         "http-method-enum": "^1.0.0",
+        "joi": "^17.5.0",
         "mongoose": "^6.1.2",
         "pg": "^8.7.1",
         "pg-hstore": "^2.3.4",
