--- a/nineth/package.json
+++ b/nineth/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@hapi/boom": "^9.1.4",
         "@hapi/hapi": "^20.2.1",
         "http-method-enum": "^1.0.0",
         "joi": "^17.5.0",
