--- a/nineth/package.json
+++ b/nineth/package.json
@@ -13,6 +13,9 @@
     "dependencies": {
         "@hapi/boom": "^9.1.4",
         "@hapi/hapi": "^20.2.1",
+        "@hapi/inert": "^6.0.4",
+        "@hapi/vision": "^6.1.0",
+        "hapi-swagger": "^14.2.4",
         "http-method-enum": "^1.0.0",
         "joi": "^17.5.0",
         "mongoose": "^6.1.2",
