--- a/nineth/package.json
+++ b/nineth/package.json
@@ -18,6 +18,7 @@
         "hapi-swagger": "^14.2.4",
         "http-method-enum": "^1.0.0",
         "joi": "^17.5.0",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.1.2",
         "pg": "^8.7.1",
         "pg-hstore": "^2.3.4",
