--- a/nineth/package.json
+++ b/nineth/package.json
@@ -15,6 +15,7 @@
         "@hapi/hapi": "^20.2.1",
         "@hapi/inert": "^6.0.4",
         "@hapi/vision": "^6.1.0",
+        "hapi-auth-jwt2": "^10.2.0",
         "hapi-swagger": "^14.2.4",
         "http-method-enum": "^1.0.0",
         "joi": "^17.5.0",
