--- a/nineth/package.json
+++ b/nineth/package.json
@@ -16,6 +16,7 @@
         "@hapi/inert": "^6.0.4",
         "@hapi/vision": "^6.1.0",
         "bcrypt": "^5.0.1",
+        "dotenv": "^10.0.0",
         "hapi-auth-jwt2": "^10.2.0",
         "hapi-swagger": "^14.2.4",
         "http-method-enum": "^1.0.0",
