--- a/nineth/package.json
+++ b/nineth/package.json
@@ -5,7 +5,8 @@
     "main": "src/api.js",
     "scripts": {
         "start": "node .",
-        "test": "mocha ./src/tests/*.test.js"
+        "test": "mocha ./src/tests/*.test.js",
+        "test:coverage": "nyc --reporter=html mocha --exit ./src/tests/*.test.js"
     },
     "keywords": [],
     "author": "",
@@ -29,6 +30,7 @@
         "status-code-enum": "^1.0.0"
     },
     "devDependencies": {
-        "mocha": "^9.1.3"
+        "mocha": "^9.1.3",
+        "nyc": "^15.1.0"
     }
 }
